# zkdb

./: .gitignore  202301021454.md  Extract Knowledge From Reading 202201042008.md  README.md  Short_ZK_Dashboard.py  TheArchivePath.py  ZK Graphical Stats .ipynb  ZK_Dashboard.py  ZK_Short_Dashboard.py  archive-path.py  archive_path.py  bear_db.py  bear_rand.py  beautiful-search.py  book_progress.py  book_progresss.py  bookography.py  daily_results.py  date_extension.py  dir_size.py  engagement.py  forum_dashboard.py  functions.py  iigwv1.py  modified.py  momento_mori.py  mometo_mora.py  monthly_stats.py  near_search.py  near_search_local.py  notes.md  number_to_words.py  occurances_in_zk.py  pyproject.toml  randomAtomic.py  requirements.txt  review.py  search.py  search_quetions.py  search_subatomic.py  (+20 more)
Printing/: all-link.js  all_links.py
_archive/: UUID_date.py  monthly_stats.py  trend.py  trend2.py  trend3.py  trend4.py  work-functions.py  zettelstats.py  zkdashboardv2.py  zkfunctions.py  zkhistory.py  zkrandom.py
_testing/: list.txt  monthly_stats.ipynb
zk_functions/: ZK_Dashboard.py  avg_per_day.py  get_word_count.py  zk_random.py  zk_stats.py  zkhistory.py
